--- a/src/styles/components/modal/_editModal.module.scss
+++ b/src/styles/components/modal/_editModal.module.scss
@@ -55,3 +55,12 @@
   width: 50%;
   object-fit: contain;
 }
+
+
+
+@media screen and (max-width: 426px) {
+  .editModal {
+    width: 100vw;
+    height: 50vh;
+  }
+}
