--- a/src/styles/layout/_index.scss
+++ b/src/styles/layout/_index.scss
@@ -12,6 +12,8 @@
 
 @import "./loginpage/loginpage.module";
 
+@import "./orderpage/orderpage.module";
+
 // @import "adminpage.module";
 // @import "productcreate.module";
 
