--- a/src/styles/abstracts/_variables.module.scss
+++ b/src/styles/abstracts/_variables.module.scss
@@ -2,20 +2,17 @@
 $black-color: #000000;
 $white-color: #ffffff;
 
-$sidebar-color1: #ED7B48;
-$sidebar-color2: #BD5A4B;
+$sidebar-color1: #ed7b48;
+$sidebar-color2: #bd5a4b;
 
-$green-color: #4FB07D;
-$red-color: #F84F5A;
-
-
+$green-color: #4fb07d;
+$red-color: #f84f5a;
 
 // For testing purposes
 @mixin borders__testing {
   border: 4px solid black;
   box-sizing: border-box;
 }
-
 
 @mixin h1__base {
   font-family: canelaBold;
@@ -26,9 +23,8 @@ $red-color: #F84F5A;
   font-size: 1rem;
 }
 
-
 @mixin p__base {
-  font-family: apercuRegular;
+  font-family: canelaRegular;
   font-size: 1rem;
 }
 
@@ -41,57 +37,287 @@ $red-color: #F84F5A;
 
 
 
-// Canela fonts
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// canela fonts
 @mixin h1__base--canela {
   font-family: canelaBold;
-  font-size: 2.5rem;
+  @media screen and (max-width: 2561px) {
+    font-size: 6rem;
+  }
+  @media screen and (max-width: 1441px) {
+    font-size: 3rem;
+  }
+  @media screen and (max-width: 1025px) {
+    font-size: 2.5rem;
+  }
+  // @media screen and (max-width: 426px) {
+  //   font-size: 2.5rem;
+  // }
+  // @media screen and (max-width: 321px) {
+  //   font-size: 2.5rem;
+  // }
 }
 
 @mixin h2__base--canela {
   font-family: canelaBold;
-  font-size: 1.5rem;
+  @media screen and (max-width: 2561px) {
+    font-size: 3rem;
+  }
+  @media screen and (max-width: 1441px) {
+    font-size: 2rem;
+  }
+  @media screen and (max-width: 1025px) {
+    font-size: 1.8rem;
+  }
+  // @media screen and (max-width: 426px) {
+  //   font-size: 1rem;
+  // }
+  // @media screen and (max-width: 321px) {
+  //   font-size: 0.8rem;
+  // }
 }
 
 @mixin h4__base--canela {
   font-family: canelaRegular;
-  font-size: 2.5rem;
+  @media screen and (max-width: 2561px) {
+    font-size: 6rem;
+  }
+  @media screen and (max-width: 1441px) {
+    font-size: 3rem;
+  }
+  @media screen and (max-width: 1025px) {
+    font-size: 2.5rem;
+  }
+  // @media screen and (max-width: 426px) {
+  //   font-size: 1.25rem;
+  // }
+  // @media screen and (max-width: 321px) {
+  //   font-size: 1rem;
+  // }
 }
 
 @mixin h5__base--canela {
   font-family: canelaRegular;
-  font-size: 1.5rem;
+  @media screen and (max-width: 2561px) {
+    font-size: 3rem;
+  }
+  @media screen and (max-width: 1441px) {
+    font-size: 2rem;
+  }
+  @media screen and (max-width: 1025px) {
+    font-size: 1.8rem;
+  }
+  // @media screen and (max-width: 426px) {
+  //   font-size: 1rem;
+  // }
+  // @media screen and (max-width: 321px) {
+  //   font-size: 0.8rem;
+  // }
+}
+
+@mixin h6__base--canela {
+  font-family: canelaRegular;
+  @media screen and (max-width: 2561px) {
+    font-size: 3rem;
+  }
+  @media screen and (max-width: 1441px) {
+    font-size: 1.5rem;
+  }
+  @media screen and (max-width: 1025px) {
+    font-size: 1.25rem;
+  }
+  @media screen and (max-width: 426px) {
+    font-size: 1rem;
+  }
+  @media screen and (max-width: 321px) {
+    font-size: 0.9rem;
+  }
 }
 
 @mixin p__base--canela {
   font-family: canelaRegular;
-  font-size: 1rem;
+  @media screen and (max-width: 2561px) {
+    font-size: 1.8rem;
+  }
+  @media screen and (max-width: 1441px) {
+    font-size: 1rem;
+  }
+  @media screen and (max-width: 1025px) {
+    font-size: 1rem;
+  }
+  @media screen and (max-width: 426px) {
+    font-size: 0.6rem;
+  }
+  @media screen and (max-width: 321px) {
+    font-size: 0.5rem;
+  }
 }
 
 
-// Apercu fonts
+
+
+
+// apercu fonts
 @mixin h1__base--apercu {
   font-family: apercuBold;
-  font-size: 2.5rem;
+  @media screen and (max-width: 2561px) {
+    font-size: 4rem;
+  }
+  @media screen and (max-width: 1441px) {
+    font-size: 2rem;
+  }
+  @media screen and (max-width: 1025px) {
+    font-size: 1.5rem;
+  }
+  @media screen and (max-width: 426px) {
+    font-size: 1.25rem;
+  }
+  @media screen and (max-width: 321px) {
+    font-size: 1rem;
+  }
 }
 
 @mixin h2__base--apercu {
   font-family: apercuBold;
-  font-size: 1.5rem;
+  @media screen and (max-width: 2561px) {
+    font-size: 3rem;
+  }
+  @media screen and (max-width: 1441px) {
+    font-size: 1.5rem;
+  }
+  @media screen and (max-width: 1025px) {
+    font-size: 1.25rem;
+  }
+  @media screen and (max-width: 426px) {
+    font-size: 1rem;
+  }
+  @media screen and (max-width: 321px) {
+    font-size: 0.8rem;
+  }
+}
+
+@mixin h4__base--apercu {
+  font-family: apercuRegular;
+  @media screen and (max-width: 2561px) {
+    font-size: 4rem;
+  }
+  @media screen and (max-width: 1441px) {
+    font-size: 3rem;
+  }
+  @media screen and (max-width: 1025px) {
+    font-size: 1.5rem;
+  }
+  @media screen and (max-width: 426px) {
+    font-size: 1.25rem;
+  }
+  @media screen and (max-width: 321px) {
+    font-size: 1rem;
+  }
 }
 
 @mixin h5__base--apercu {
   font-family: apercuRegular;
-  font-size: 1.5rem;
+  @media screen and (max-width: 2561px) {
+    font-size: 3rem;
+  }
+  @media screen and (max-width: 1441px) {
+    font-size: 1.5rem;
+  }
+  @media screen and (max-width: 1025px) {
+    font-size: 1.25rem;
+  }
+  @media screen and (max-width: 426px) {
+    font-size: 1rem;
+  }
+  @media screen and (max-width: 321px) {
+    font-size: 0.8rem;
+  }
 }
 
 @mixin h6__base--apercu {
   font-family: apercuRegular;
-  font-size: 1.25rem;
+  @media screen and (max-width: 2561px) {
+    font-size: 2.5rem;
+  }
+  @media screen and (max-width: 1441px) {
+    font-size: 1.25rem;
+  }
+  @media screen and (max-width: 1025px) {
+    font-size: 1rem;
+  }
+  @media screen and (max-width: 426px) {
+    font-size: 0.8rem;
+  }
+  @media screen and (max-width: 321px) {
+    font-size: 0.6rem;
+  }
 }
 
 @mixin p__base--apercu {
   font-family: apercuRegular;
-  font-size: 1rem;
+  @media screen and (max-width: 2561px) {
+    font-size: 1.8rem;
+  }
+  @media screen and (max-width: 1441px) {
+    font-size: 1rem;
+  }
+  @media screen and (max-width: 1025px) {
+    font-size: 1rem;
+  }
+  @media screen and (max-width: 769px) {
+    font-size: 0.8rem;
+  }
+  // @media screen and (max-width: 321px) {
+  //   font-size: 0.5rem;
+  // }
 }
 
 
@@ -104,20 +330,33 @@ $red-color: #F84F5A;
 
 
 
+
+
+
+
+
+
+
+
+
+
+// @mixin h6__base--canela {
+//   font-family: canelaRegular;
+//   font-size: 3rem;
+// }
+
 // Button variables
 @mixin button__base {
+  @include h6__base--canela;
   border: 4px solid black;
   border-radius: 12px;
   box-sizing: border-box;
 
   padding: 0.5rem 1rem;
   background-color: transparent;
-  font-family: canelaBold;
-  font-size: 1rem;
 
   cursor: pointer;
 }
-
 
 @mixin button__base--noBorder {
   border-radius: 48px;
@@ -125,21 +364,11 @@ $red-color: #F84F5A;
 
   padding: 1rem;
   background-color: transparent;
-  font-family: apercuBold;
+  font-family: canelaBold;
   font-size: 1.25rem;
 
   cursor: pointer;
 }
-
-
-
-
-
-
-
-
-
-
 
 @mixin sidebar__iconCtn {
   position: relative;
@@ -148,13 +377,7 @@ $red-color: #F84F5A;
   cursor: pointer;
 }
 
-
-
 // font related mixins
-
-
-
-
 
 // Modal stuff
 @mixin modal__background {
@@ -165,8 +388,7 @@ $red-color: #F84F5A;
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-
-// Flash stuff 
+// Flash stuff
 @mixin flash__base {
   display: flex;
   justify-content: center;
