--- a/src/styles/components/jumbotron/_jumbotron.module.scss
+++ b/src/styles/components/jumbotron/_jumbotron.module.scss
@@ -1,42 +1,55 @@
-.jumbotron {
-  position: relative;
-  box-sizing: border-box;
-  padding: 5rem;
-  width: 100vw;
-  height: 80vh;
+@media screen and (max-width: 2561px) {
+  .jumbotron {
+    position: relative;
+    box-sizing: border-box;
+    padding: 5rem;
+    width: 100vw;
+    height: 80vh;
+  }
+  
+  
+  .jumbotron__cardCtn {
+    position: relative;
+    box-sizing: border-box;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    width: 100%;
+    height: 100%;
+  }
+  
+  // Jumbotron image
+  .jumbotron__cardCtn > img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  // Jumbotron's header stuff
+  .jumbotron__titleCtn {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translate(-50%, -50%);
+  }
+  
+  .jumbotron__titleCtn h1 {
+    @include h1__base--canela;
+    margin-bottom: 1rem;
+    text-align: center;
+  }
 }
 
 
-.jumbotron__cardCtn {
-  position: relative;
-  box-sizing: border-box;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  width: 100%;
-  height: 100%;
+
+
+@media screen and (max-width: 769px) {
+  .jumbotron {
+    padding: 0rem;
+  }  
 }
 
-// Jumbotron image
-.jumbotron__cardCtn > img {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-// Jumbotron's header stuff
-.jumbotron__titleCtn {
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  transform: translate(-50%, -50%);
-}
-
-.jumbotron__titleCtn h1 {
-  @include h1__base--canela;
-  margin-bottom: 1rem;
-}
 
 
