--- a/src/styles/components/jumbotron/_pageHeader.module.scss
+++ b/src/styles/components/jumbotron/_pageHeader.module.scss
@@ -1,55 +1,65 @@
-.pageHeader {
-  position: relative;
-  box-sizing: border-box;
-  padding: 5rem;
-  width: 100vw;
-  height: 40vh;
+@media screen and (max-width: 2561px) {
+  .pageHeader {
+    position: relative;
+    box-sizing: border-box;
+    padding: 5rem;
+    width: 100vw;
+    height: 40vh;
+  }
+
+  .pageHeader__cardCtn {
+    position: relative;
+    box-sizing: border-box;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 100%;
+  }
+
+  .pageHeader__backdrop {
+    position: absolute;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  // pageHeader image
+  .pageHeader__cardCtn > img {
+    position: relative;
+    z-index: 9;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  // pageHeader's header stuff
+  .pageHeader__titleCtn {
+    position: absolute;
+    z-index: 11;
+    top: 50%;
+    left: 0%;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 2rem 4rem;
+  }
+
+  .pageHeader__titleCtn h1 {
+    @include h1__base--canela;
+    color: $white-color;
+  }
 }
 
-
-.pageHeader__cardCtn {
-  position: relative;
-  box-sizing: border-box;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  width: 100%;
-  height: 100%;
+@media screen and (max-width: 769px) {
+  .pageHeader { 
+    padding: 0rem 0rem 5rem;
+  }
 }
 
-.pageHeader__backdrop {
-  position: absolute;
-  z-index: 10;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.3);
+@media screen and (max-width: 426px) {
+  .pageHeader {
+    padding: 0rem;
+  }
 }
-
-// pageHeader image
-.pageHeader__cardCtn > img {
-  position: relative;
-  z-index: 9;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-// pageHeader's header stuff
-.pageHeader__titleCtn {
-  position: absolute;
-  z-index: 11;
-  top: 50%;
-  left: 0%;
-  transform: translateY(-50%);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 2rem 4rem;
-}
-
-.pageHeader__titleCtn h1 {
-  @include h1__base--canela;
-  font-size: 4rem;
-  color: $white-color;
-}
-
-
