--- a/src/styles/components/pagination/_pagination.module.scss
+++ b/src/styles/components/pagination/_pagination.module.scss
@@ -11,7 +11,20 @@
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  padding: 1rem 3rem;
+  padding: 0rem 1rem;
+  text-align: center;
   background-color: $black-color;
   color: $white-color;
+}
+
+
+@media screen and (max-width: 426px) {
+  .pagination__navigationCtn {
+    height: 4rem;
+  }
+
+  .pagination__navigationCtn > h5 {
+    padding: 0rem 0.25rem;
+    width: 3rem;
+  }
 }
